fix accessability issues

--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,8 +1,8 @@
 <div class="nav-container p-4 border-b border-gray-300 border-solid flex-shrink-0">
     <div class="nav-inner-container container flex mx-auto flex-wrap">
 
-        <a href="/" title="Home" class="flex-shrink-0">
-            <h1 class="masthead-title text-2xl align-middle" >{{ siteTitle }}</h1>
+        <a href="/" title="Home" class="flex-shrink-0" >
+            <header class="masthead-title text-2xl align-middle font-serif" role="banner">{{ siteTitle }}</header>
         </a>
         <div id="social-icons" class="flex items-center flex-shrink-0 ml-2">
             <a href="https://github.com/odedw" target="_blank" title="Github">
@@ -19,14 +19,14 @@
             </a>
         </div>
         <div class="flex-1"></div>
-        <nav class="nav-items items-center flex justify-self-end flex-shrink-0">
-            <a href="/projects" title="Projects">projects</a>
+        <nav class="nav-items items-center flex justify-self-end flex-shrink-0" role="navigation">
+            <a href="/projects" >projects</a>
             <span class="px-1">•</span>
-            <a href="/music" title="Music">music</a>
+            <a href="/music" >music</a>
             <span class="px-1">•</span>
-            <a href="/art" title="Art">art</a>
+            <a href="/art" >art</a>
             <span class="px-1">•</span>
-            <a href="/about" title="About">about</a>
+            <a href="/about">about</a>
         </nav>
     </div>
 </div>
