--- a/pages/art.njk
+++ b/pages/art.njk
@@ -2,10 +2,10 @@
 layout: layouts/default.njk
 title: Art
 ---
-{% macro youtube(url, description) %}
+{% macro youtube(url, description, title) %}
     <div class="w-4/5 mx-auto mb-16">
         <div class="youtube-container">
-            <iframe class="youtube" src="{{ url }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe title={{ title }} class="youtube" src="{{ url }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mt-2">{{ description }}</div>
     </div>
@@ -66,26 +66,17 @@ title: Art
         </blockquote>
     </div>
 {% endmacro %}
-{% macro codepen(id)%}
-    <p class="codepen" data-height="448" data-theme-id="dark" data-default-tab="result" data-user="odedw" data-slug-hash="{{ id }}" style="height: 448px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Fractal Plant L-System">
-        <span>See the Pen <a href="https://codepen.io/odedw/pen/{{ id }}">
-  Fractal Plant L-System</a> by Oded Welgreen (<a href="https://codepen.io/odedw">@odedw</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-    </p>
-    {% endmacro%}
-    <div class="">
-        <div class="mb-10">
+<div class="">
+    <div class="mb-10" aria-level="1" role="heading">
         I am interested in proceduraly generated art as well as the intersection between art, technology and music. I often try to find a way to combine the three.
         Here are some of my attempts to explore these concepts.
     </div>
-        {% for link in art %}
-            {% if link.type == "youtube" %}
-                {{ youtube(link.url, link.description) }}
-            {% elif link.type == "instagram"%}
-                {{ insta(link.id) }}
-            {% endif %}
-        {% endfor %}
-
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-        <script async src="//www.instagram.com/embed.js"></script>
-    </div>
+    {% for link in art %}
+        {% if link.type == "youtube" %}
+            {{ youtube(link.url, link.description, link.title) }}
+        {% elif link.type == "instagram"%}
+            {{ insta(link.id) }}
+        {% endif %}
+    {% endfor %}
+    <script async src="//www.instagram.com/embed.js"></script>
+</div>
