--- a/pages/index.njk
+++ b/pages/index.njk
@@ -9,7 +9,14 @@ layout: layouts/default.njk
         {% for item in nav %}
             <a href="{{item.link}}" >
                 <div class="w-40 px-2 mb-5">
-                    <img src="{{ item.image }}" alt=""/>
+                    {% if item.thumbnailType == "image" %}
+                        <img src="{{ item.thumbnailPath }}" alt=""/>
+                    {% elif item.thumbnailType == "video" %}
+                        <video autoplay loop class="object-fill" alt="">
+                            <source src="{{item.thumbnailPath}}.webm" type="video/webm">
+                            <source src="{{item.thumbnailPath}}.mp4" type="video/mp4">
+                        </video>
+                    {% endif %}
                     <div class="text-xl text-center mt-2">{{item.name}}</div>
                 </div>
             </a>
