--- a/pages/index.njk
+++ b/pages/index.njk
@@ -12,7 +12,7 @@ layout: layouts/default.njk
                     {% if item.thumbnailType == "image" %}
                         <img src="{{ item.thumbnailPath }}" alt=""/>
                     {% elif item.thumbnailType == "video" %}
-                        <video autoplay loop class="object-fill" alt="">
+                        <video muted autoplay loop class="object-fill" alt="">
                             <source src="{{item.thumbnailPath}}.webm" type="video/webm">
                             <source src="{{item.thumbnailPath}}.mp4" type="video/mp4">
                         </video>
