--- a/pages/art.njk
+++ b/pages/art.njk
@@ -68,7 +68,7 @@ title: Art
 {% endmacro %}
 <div class="">
   <div class="mb-10" aria-level="1" role="heading">
-        I am interested in proceduraly generated art as well as the intersection between art, technology and music. I often try to find a way to combine the three.
+        I am interested in procedurally generated art as well as the intersection between art, technology and music. I often try to find a way to combine the three.
         Here are some of my attempts to explore these concepts.
     </div>
   {% for link in art %}
