--- a/pages/index.njk
+++ b/pages/index.njk
@@ -5,7 +5,7 @@ layout: layouts/default.njk
 <div class="pb-6">
     <img class="mx-auto relative object-cover w-36 h-36 border-2 border-white rounded-full" src="/images/profile.jpeg" alt="Profile image"/>
     <h1 class="text-3xl font-serif text-center mt-4">Software Engineer • Music Maker • Artist</h1>
-    <div class="flex justify-evenly flex-wrap mt-10 nav-container">
+    <div class="flex justify-center flex-wrap mt-10 nav-container">
         {% for item in nav %}
             <a href="{{item.link}}" >
                 <div class="w-40 px-2 mb-5">
