--- a/assets/main.css
+++ b/assets/main.css
@@ -360,8 +360,7 @@ code {
 img,
 svg,
 video,
-iframe,
-embed {
+iframe {
   display: block;
   vertical-align: middle;
 }
@@ -480,12 +479,12 @@ video {
   justify-content: flex-end;
 }
 
-.justify-around {
-  justify-content: space-around;
+.justify-center {
+  justify-content: center;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
+.justify-around {
+  justify-content: space-around;
 }
 
 .justify-self-end {
@@ -770,7 +769,7 @@ a:hover {
 }
 
 .container {
-  max-width: 45rem;
+  max-width: 55rem;
 }
 
 .nav-inner-container {
