add talks to website

--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -29,6 +29,8 @@
       <span class="px-1">•</span>
       <a href="/art" >art</a>
       <span class="px-1">•</span>
+      <a href="/talks" >talks</a>
+      <span class="px-1">•</span>
       <a href="/about">about</a>
     </nav>
   </div>
